# FC_Eigen

./: .gitignore  Activation.hpp  CMakeLists.txt  Layer.hpp  Loss.hpp  Model.hpp  README.md  TODO  Utils.hpp  config.h  dataloader.hpp  main.cpp  painter.hpp
fmt/: ChangeLog.rst  README.rst
fmt/doc/: index.rst  python-license.txt
fmt/doc/bootstrap/: button-groups.less  dropdowns.less  glyphicons.less  modals.less  navbar.less  navs.less  theme.less
fmt/doc/bootstrap/mixins/: buttons.less
fmt/doc/html/: api.html  index.html
fmt/doc/html/_sources/: index.rst.txt
fmt/include/fmt/: format.h  os.h
fmt/src/: os.cc
includes/: Activation.hpp  Layer.hpp  Loss.hpp  Model.hpp  Optimizer.hpp  dataloader.hpp  painter.hpp
